disabled form elements don't have aqua appearance (bug 204237) r=josh sr=bryner